--- a/bloopers.html
+++ b/bloopers.html
@@ -12,6 +12,7 @@
 		<script src = "jquery-3.6.0.min.js"></script>
 		<script src = "https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"> </script>
 		<!-- <script src="howler.min.js"></script> -->
+		<script src="script2.js" defer></script>
 
 	</head>
 
