--- a/bloopers.html
+++ b/bloopers.html
@@ -11,7 +11,6 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.js"></script>
 		<script src = "jquery-3.6.0.min.js"></script>
 		<script src = "https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"> </script>
-		<!-- <script src="howler.min.js"></script> -->
 		<script src="script2.js" defer></script>
 
 	</head>
@@ -55,7 +54,7 @@
 
 			<div id="main">
 
-
+				<!-- adding yt video -->
 				<div class= "wrapper" id = "cast">
 					<div class="panel" id = "team" >
 						<div class="person">
@@ -71,8 +70,6 @@
 
 			</div>
 
-
-		</div>
 
 	</body>
 
